source/projects/chuck~/core/chuck.output
Terminals which are not used

   POUND
   ASSIGN
   THEN
   NULL_TOK
   SIMULT
   PATTERN
   CODE
   TRANSPORT
   HOST
   TIME
   WHENEVER
   NEXT
   EVERY
   BEFORE
   AFTER
   AT
   ATAT_SYM
   S_CHUCK
   LEFT_S_CHUCK
   CONST


State 52 conflicts: 38 shift/reduce
State 117 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 264 conflicts: 1 shift/reduce
State 279 conflicts: 38 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_section
    2        | program program_section

    3 program_section: statement_list
    4                | function_definition
    5                | class_definition

    6 class_definition: class_decl CLASS id_list LBRACE class_body RBRACE
    7                 | class_decl CLASS id_list class_ext LBRACE class_body RBRACE
    8                 | class_decl INTERFACE id_list LBRACE class_body RBRACE
    9                 | class_decl INTERFACE id_list iface_ext LBRACE class_body RBRACE

   10 class_ext: IMPLEMENTS id_list
   11          | IMPLEMENTS id_list EXTENDS id_dot
   12          | EXTENDS id_dot
   13          | EXTENDS id_dot IMPLEMENTS id_list

   14 class_body: class_body2
   15           | /* empty */

   16 class_body2: class_section
   17            | class_section class_body2

   18 class_section: statement_list
   19              | function_definition
   20              | class_definition

   21 iface_ext: EXTENDS id_list

   22 id_list: ID
   23        | ID COMMA id_list

   24 id_dot: ID
   25       | ID DOT id_dot

   26 function_definition: function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN code_segment
   27                    | function_decl static_decl type_decl2 ID LPAREN RPAREN code_segment
   28                    | function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN SEMICOLON
   29                    | function_decl static_decl type_decl2 ID LPAREN RPAREN SEMICOLON

   30 class_decl: PUBLIC
   31           | PRIVATE
   32           | /* empty */

   33 function_decl: FUNCTION
   34              | PUBLIC
   35              | PROTECTED
   36              | PRIVATE

   37 static_decl: STATIC
   38            | ABSTRACT
   39            | /* empty */

   40 type_decl_a: ID
   41            | ID AT_SYM

   42 type_decl_b: LT id_dot GT
   43            | LT id_dot GT AT_SYM

   44 type_decl: type_decl_a
   45          | type_decl_b

   46 type_decl2: type_decl
   47           | type_decl array_empty

   48 arg_list: type_decl var_decl
   49         | type_decl var_decl COMMA arg_list

   50 statement_list: statement
   51               | statement_list statement

   52 statement: expression_statement
   53          | loop_statement
   54          | selection_statement
   55          | jump_statement
   56          | code_segment

   57 jump_statement: RETURN SEMICOLON
   58               | RETURN expression SEMICOLON
   59               | BREAK SEMICOLON
   60               | CONTINUE SEMICOLON

   61 selection_statement: IF LPAREN expression RPAREN statement
   62                    | IF LPAREN expression RPAREN statement ELSE statement

   63 loop_statement: WHILE LPAREN expression RPAREN statement
   64               | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   65               | FOR LPAREN expression_statement expression_statement RPAREN statement
   66               | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   67               | UNTIL LPAREN expression RPAREN statement
   68               | DO statement UNTIL LPAREN expression RPAREN SEMICOLON
   69               | LOOP LPAREN expression RPAREN statement

   70 code_segment: LBRACE RBRACE
   71             | LBRACE statement_list RBRACE

   72 expression_statement: SEMICOLON
   73                     | expression SEMICOLON

   74 expression: chuck_expression
   75           | expression COMMA chuck_expression

   76 chuck_expression: arrow_expression
   77                 | chuck_expression chuck_operator arrow_expression

   78 arrow_expression: decl_expression
   79                 | arrow_expression arrow_operator decl_expression

   80 array_exp: LBRACK expression RBRACK
   81          | LBRACK expression RBRACK array_exp

   82 array_empty: LBRACK RBRACK
   83            | array_empty LBRACK RBRACK

   84 decl_expression: conditional_expression
   85                | type_decl var_decl_list
   86                | EXTERNAL type_decl var_decl_list
   87                | GLOBAL type_decl var_decl_list
   88                | STATIC type_decl var_decl_list
   89                | SAME var_decl_list
   90                | STATIC SAME var_decl_list

   91 var_decl_list: var_decl
   92              | var_decl COMMA var_decl_list

   93 var_decl: ID
   94         | ID array_exp
   95         | ID array_empty

   96 complex_exp: POUNDPAREN expression RPAREN

   97 polar_exp: PERCENTPAREN expression RPAREN

   98 vec_exp: ATPAREN expression RPAREN

   99 chuck_operator: CHUCK
  100               | AT_CHUCK
  101               | PLUS_CHUCK
  102               | MINUS_CHUCK
  103               | TIMES_CHUCK
  104               | DIVIDE_CHUCK
  105               | SHIFT_RIGHT_CHUCK
  106               | SHIFT_LEFT_CHUCK
  107               | PERCENT_CHUCK
  108               | UNCHUCK
  109               | UPCHUCK
  110               | S_AND_CHUCK
  111               | S_OR_CHUCK
  112               | S_XOR_CHUCK

  113 arrow_operator: ARROW_LEFT
  114               | ARROW_RIGHT

  115 conditional_expression: logical_or_expression
  116                       | logical_or_expression QUESTION expression COLON conditional_expression

  117 logical_or_expression: logical_and_expression
  118                      | logical_or_expression OR logical_and_expression

  119 logical_and_expression: inclusive_or_expression
  120                       | logical_and_expression AND inclusive_or_expression

  121 inclusive_or_expression: exclusive_or_expression
  122                        | inclusive_or_expression S_OR exclusive_or_expression

  123 exclusive_or_expression: and_expression
  124                        | exclusive_or_expression S_XOR and_expression

  125 and_expression: equality_expression
  126               | and_expression S_AND equality_expression

  127 equality_expression: relational_expression
  128                    | equality_expression EQ relational_expression
  129                    | equality_expression NEQ relational_expression

  130 relational_expression: shift_expression
  131                      | relational_expression LT shift_expression
  132                      | relational_expression GT shift_expression
  133                      | relational_expression LE shift_expression
  134                      | relational_expression GE shift_expression

  135 shift_expression: additive_expression
  136                 | shift_expression SHIFT_LEFT additive_expression
  137                 | shift_expression SHIFT_RIGHT additive_expression

  138 additive_expression: multiplicative_expression
  139                    | additive_expression PLUS multiplicative_expression
  140                    | additive_expression MINUS multiplicative_expression

  141 multiplicative_expression: tilda_expression
  142                          | multiplicative_expression TIMES tilda_expression
  143                          | multiplicative_expression DIVIDE tilda_expression
  144                          | multiplicative_expression PERCENT tilda_expression

  145 tilda_expression: cast_expression
  146                 | tilda_expression TILDA cast_expression

  147 cast_expression: unary_expression
  148                | cast_expression DOLLAR type_decl

  149 unary_expression: dur_expression
  150                 | PLUSPLUS unary_expression
  151                 | MINUSMINUS unary_expression
  152                 | unary_operator unary_expression
  153                 | TYPEOF unary_expression
  154                 | SIZEOF unary_expression
  155                 | NEW type_decl
  156                 | NEW type_decl array_exp

  157 unary_operator: PLUS
  158               | MINUS
  159               | TILDA
  160               | EXCLAMATION
  161               | TIMES
  162               | SPORK TILDA

  163 dur_expression: postfix_expression
  164               | dur_expression COLONCOLON postfix_expression

  165 postfix_expression: primary_expression
  166                   | postfix_expression array_exp
  167                   | postfix_expression LPAREN RPAREN
  168                   | postfix_expression LPAREN expression RPAREN
  169                   | postfix_expression DOT ID
  170                   | postfix_expression PLUSPLUS
  171                   | postfix_expression MINUSMINUS

  172 primary_expression: ID
  173                   | NUM
  174                   | FLOAT
  175                   | STRING_LIT
  176                   | CHAR_LIT
  177                   | array_exp
  178                   | complex_exp
  179                   | polar_exp
  180                   | vec_exp
  181                   | L_HACK expression R_HACK
  182                   | LPAREN expression RPAREN
  183                   | LPAREN RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 22 23 24 25 26 27 28 29 40 41 93 94 95 169 172
STRING_LIT (259) 175
CHAR_LIT (260) 176
NUM (261) 173
FLOAT (262) 174
POUND (263)
COMMA (264) 23 49 75 92
COLON (265) 116
SEMICOLON (266) 28 29 57 58 59 60 64 68 72 73
LPAREN (267) 26 27 28 29 61 62 63 64 65 66 67 68 69 167 168 182 183
RPAREN (268) 26 27 28 29 61 62 63 64 65 66 67 68 69 96 97 98 167 168
    182 183
LBRACK (269) 80 81 82 83
RBRACK (270) 80 81 82 83
LBRACE (271) 6 7 8 9 70 71
RBRACE (272) 6 7 8 9 70 71
DOT (273) 25 169
PLUS (274) 139 157
MINUS (275) 140 158
TIMES (276) 142 161
DIVIDE (277) 143
PERCENT (278) 144
EQ (279) 128
NEQ (280) 129
LT (281) 42 43 131
LE (282) 133
GT (283) 42 43 132
GE (284) 134
AND (285) 120
OR (286) 118
ASSIGN (287)
IF (288) 61 62
THEN (289)
ELSE (290) 62
WHILE (291) 63 64
FOR (292) 65 66
DO (293) 64 68
LOOP (294) 69
BREAK (295) 59
CONTINUE (296) 60
NULL_TOK (297)
FUNCTION (298) 33
RETURN (299) 57 58
QUESTION (300) 116
EXCLAMATION (301) 160
S_OR (302) 122
S_AND (303) 126
S_XOR (304) 124
PLUSPLUS (305) 150 170
MINUSMINUS (306) 151 171
DOLLAR (307) 148
POUNDPAREN (308) 96
PERCENTPAREN (309) 97
ATPAREN (310) 98
SIMULT (311)
PATTERN (312)
CODE (313)
TRANSPORT (314)
HOST (315)
TIME (316)
WHENEVER (317)
NEXT (318)
UNTIL (319) 67 68
EXTERNAL (320) 86
GLOBAL (321) 87
EVERY (322)
BEFORE (323)
AFTER (324)
AT (325)
AT_SYM (326) 41 43
ATAT_SYM (327)
NEW (328) 155 156
SIZEOF (329) 154
TYPEOF (330) 153
SAME (331) 89 90
PLUS_CHUCK (332) 101
MINUS_CHUCK (333) 102
TIMES_CHUCK (334) 103
DIVIDE_CHUCK (335) 104
S_AND_CHUCK (336) 110
S_OR_CHUCK (337) 111
S_XOR_CHUCK (338) 112
SHIFT_RIGHT_CHUCK (339) 105
SHIFT_LEFT_CHUCK (340) 106
PERCENT_CHUCK (341) 107
SHIFT_RIGHT (342) 137
SHIFT_LEFT (343) 136
TILDA (344) 146 159 162
CHUCK (345) 99
COLONCOLON (346) 164
S_CHUCK (347)
AT_CHUCK (348) 100
LEFT_S_CHUCK (349)
UNCHUCK (350) 108
UPCHUCK (351) 109
CLASS (352) 6 7
INTERFACE (353) 8 9
EXTENDS (354) 11 12 13 21
IMPLEMENTS (355) 10 11 13
PUBLIC (356) 30 34
PROTECTED (357) 35
PRIVATE (358) 31 36
STATIC (359) 37 88 90
ABSTRACT (360) 38
CONST (361)
SPORK (362) 162
ARROW_RIGHT (363) 114
ARROW_LEFT (364) 113
L_HACK (365) 181
R_HACK (366) 181


Nonterminals, with rules where they appear

$accept (112)
    on left: 0
program (113)
    on left: 1 2, on right: 0 2
program_section (114)
    on left: 3 4 5, on right: 1 2
class_definition (115)
    on left: 6 7 8 9, on right: 5 20
class_ext (116)
    on left: 10 11 12 13, on right: 7
class_body (117)
    on left: 14 15, on right: 6 7 8 9
class_body2 (118)
    on left: 16 17, on right: 14 17
class_section (119)
    on left: 18 19 20, on right: 16 17
iface_ext (120)
    on left: 21, on right: 9
id_list (121)
    on left: 22 23, on right: 6 7 8 9 10 11 13 21 23
id_dot (122)
    on left: 24 25, on right: 11 12 13 25 42 43
function_definition (123)
    on left: 26 27 28 29, on right: 4 19
class_decl (124)
    on left: 30 31 32, on right: 6 7 8 9
function_decl (125)
    on left: 33 34 35 36, on right: 26 27 28 29
static_decl (126)
    on left: 37 38 39, on right: 26 27 28 29
type_decl_a (127)
    on left: 40 41, on right: 44
type_decl_b (128)
    on left: 42 43, on right: 45
type_decl (129)
    on left: 44 45, on right: 46 47 48 49 85 86 87 88 148 155 156
type_decl2 (130)
    on left: 46 47, on right: 26 27 28 29
arg_list (131)
    on left: 48 49, on right: 26 28 49
statement_list (132)
    on left: 50 51, on right: 3 18 51 71
statement (133)
    on left: 52 53 54 55 56, on right: 50 51 61 62 63 64 65 66 67 68
    69
jump_statement (134)
    on left: 57 58 59 60, on right: 55
selection_statement (135)
    on left: 61 62, on right: 54
loop_statement (136)
    on left: 63 64 65 66 67 68 69, on right: 53
code_segment (137)
    on left: 70 71, on right: 26 27 56
expression_statement (138)
    on left: 72 73, on right: 52 65 66
expression (139)
    on left: 74 75, on right: 58 61 62 63 64 66 67 68 69 73 75 80 81
    96 97 98 116 168 181 182
chuck_expression (140)
    on left: 76 77, on right: 74 75 77
arrow_expression (141)
    on left: 78 79, on right: 76 77 79
array_exp (142)
    on left: 80 81, on right: 81 94 156 166 177
array_empty (143)
    on left: 82 83, on right: 47 83 95
decl_expression (144)
    on left: 84 85 86 87 88 89 90, on right: 78 79
var_decl_list (145)
    on left: 91 92, on right: 85 86 87 88 89 90 92
var_decl (146)
    on left: 93 94 95, on right: 48 49 91 92
complex_exp (147)
    on left: 96, on right: 178
polar_exp (148)
    on left: 97, on right: 179
vec_exp (149)
    on left: 98, on right: 180
chuck_operator (150)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111 112
   , on right: 77
arrow_operator (151)
    on left: 113 114, on right: 79
conditional_expression (152)
    on left: 115 116, on right: 84 116
logical_or_expression (153)
    on left: 117 118, on right: 115 116 118
logical_and_expression (154)
    on left: 119 120, on right: 117 118 120
inclusive_or_expression (155)
    on left: 121 122, on right: 119 120 122
exclusive_or_expression (156)
    on left: 123 124, on right: 121 122 124
and_expression (157)
    on left: 125 126, on right: 123 124 126
equality_expression (158)
    on left: 127 128 129, on right: 125 126 128 129
relational_expression (159)
    on left: 130 131 132 133 134, on right: 127 128 129 131 132 133
    134
shift_expression (160)
    on left: 135 136 137, on right: 130 131 132 133 134 136 137
additive_expression (161)
    on left: 138 139 140, on right: 135 136 137 139 140
multiplicative_expression (162)
    on left: 141 142 143 144, on right: 138 139 140 142 143 144
tilda_expression (163)
    on left: 145 146, on right: 141 142 143 144 146
cast_expression (164)
    on left: 147 148, on right: 145 146 148
unary_expression (165)
    on left: 149 150 151 152 153 154 155 156, on right: 147 150 151
    152 153 154
unary_operator (166)
    on left: 157 158 159 160 161 162, on right: 152
dur_expression (167)
    on left: 163 164, on right: 149 164
postfix_expression (168)
    on left: 165 166 167 168 169 170 171, on right: 163 164 166 167
    168 169 170 171
primary_expression (169)
    on left: 172 173 174 175 176 177 178 179 180 181 182 183,
    on right: 165


state 0

    0 $accept: . program $end

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    NUM           shift, and go to state 4
    FLOAT         shift, and go to state 5
    SEMICOLON     shift, and go to state 6
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    LBRACE        shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    IF            shift, and go to state 14
    WHILE         shift, and go to state 15
    FOR           shift, and go to state 16
    DO            shift, and go to state 17
    LOOP          shift, and go to state 18
    BREAK         shift, and go to state 19
    CONTINUE      shift, and go to state 20
    FUNCTION      shift, and go to state 21
    RETURN        shift, and go to state 22
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    UNTIL         shift, and go to state 29
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    PUBLIC        shift, and go to state 37
    PROTECTED     shift, and go to state 38
    PRIVATE       shift, and go to state 39
    STATIC        shift, and go to state 40
    SPORK         shift, and go to state 41
    L_HACK        shift, and go to state 42

    $default  reduce using rule 32 (class_decl)

    program                    go to state 43
    program_section            go to state 44
    class_definition           go to state 45
    function_definition        go to state 46
    class_decl                 go to state 47
    function_decl              go to state 48
    type_decl_a                go to state 49
    type_decl_b                go to state 50
    type_decl                  go to state 51
    statement_list             go to state 52
    statement                  go to state 53
    jump_statement             go to state 54
    selection_statement        go to state 55
    loop_statement             go to state 56
    code_segment               go to state 57
    expression_statement       go to state 58
    expression                 go to state 59
    chuck_expression           go to state 60
    arrow_expression           go to state 61
    array_exp                  go to state 62
    decl_expression            go to state 63
    complex_exp                go to state 64
    polar_exp                  go to state 65
    vec_exp                    go to state 66
    conditional_expression     go to state 67
    logical_or_expression      go to state 68
    logical_and_expression     go to state 69
    inclusive_or_expression    go to state 70
    exclusive_or_expression    go to state 71
    and_expression             go to state 72
    equality_expression        go to state 73
    relational_expression      go to state 74
    shift_expression           go to state 75
    additive_expression        go to state 76
    multiplicative_expression  go to state 77
    tilda_expression           go to state 78
    cast_expression            go to state 79
    unary_expression           go to state 80
    unary_operator             go to state 81
    dur_expression             go to state 82
    postfix_expression         go to state 83
    primary_expression         go to state 84


state 1

   40 type_decl_a: ID .
   41            | ID . AT_SYM
  172 primary_expression: ID .

    AT_SYM  shift, and go to state 85

    ID        reduce using rule 40 (type_decl_a)
    $default  reduce using rule 172 (primary_expression)


state 2

  175 primary_expression: STRING_LIT .

    $default  reduce using rule 175 (primary_expression)


state 3

  176 primary_expression: CHAR_LIT .

    $default  reduce using rule 176 (primary_expression)


state 4

  173 primary_expression: NUM .

    $default  reduce using rule 173 (primary_expression)


state 5

  174 primary_expression: FLOAT .

    $default  reduce using rule 174 (primary_expression)


state 6

   72 expression_statement: SEMICOLON .

    $default  reduce using rule 72 (expression_statement)


state 7

  182 primary_expression: LPAREN . expression RPAREN
  183                   | LPAREN . RPAREN

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    NUM           shift, and go to state 4
    FLOAT         shift, and go to state 5
    LPAREN        shift, and go to state 7
    RPAREN        shift, and go to state 86
    LBRACK        shift, and go to state 8
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    STATIC        shift, and go to state 40
    SPORK         shift, and go to state 41
    L_HACK        shift, and go to state 42

    type_decl_a                go to state 49
    type_decl_b                go to state 50
    type_decl                  go to state 51
    expression                 go to state 87
    chuck_expression           go to state 60
    arrow_expression           go to state 61
    array_exp                  go to state 62
    decl_expression            go to state 63
    complex_exp                go to state 64
    polar_exp                  go to state 65
    vec_exp                    go to state 66
    conditional_expression     go to state 67
    logical_or_expression      go to state 68
    logical_and_expression     go to state 69
    inclusive_or_expression    go to state 70
    exclusive_or_expression    go to state 71
    and_expression             go to state 72
    equality_expression        go to state 73
    relational_expression      go to state 74
    shift_expression           go to state 75
    additive_expression        go to state 76
    multiplicative_expression  go to state 77
    tilda_expression           go to state 78
    cast_expression            go to state 79
    unary_expression           go to state 80
    unary_operator             go to state 81
    dur_expression             go to state 82
    postfix_expression         go to state 83
    primary_expression         go to state 84


state 8

   80 array_exp: LBRACK . expression RBRACK
   81          | LBRACK . expression RBRACK array_exp

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    NUM           shift, and go to state 4
    FLOAT         shift, and go to state 5
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    STATIC        shift, and go to state 40
    SPORK         shift, and go to state 41
    L_HACK        shift, and go to state 42

    type_decl_a                go to state 49
    type_decl_b                go to state 50
    type_decl                  go to state 51
    expression                 go to state 88
    chuck_expression           go to state 60
    arrow_expression           go to state 61
    array_exp                  go to state 62
    decl_expression            go to state 63
    complex_exp                go to state 64
    polar_exp                  go to state 65
    vec_exp                    go to state 66
    conditional_expression     go to state 67
    logical_or_expression      go to state 68
    logical_and_expression     go to state 69
    inclusive_or_expression    go to state 70
    exclusive_or_expression    go to state 71
    and_expression             go to state 72
    equality_expression        go to state 73
    relational_expression      go to state 74
    shift_expression           go to state 75
    additive_expression        go to state 76
    multiplicative_expression  go to state 77
    tilda_expression           go to state 78
    cast_expression            go to state 79
    unary_expression           go to state 80
    unary_operator             go to state 81
    dur_expression             go to state 82
    postfix_expression         go to state 83
    primary_expression         go to state 84


state 9

   70 code_segment: LBRACE . RBRACE
   71             | LBRACE . statement_list RBRACE

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    NUM           shift, and go to state 4
    FLOAT         shift, and go to state 5
    SEMICOLON     shift, and go to state 6
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    LBRACE        shift, and go to state 9
    RBRACE        shift, and go to state 89
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    IF            shift, and go to state 14
    WHILE         shift, and go to state 15
    FOR           shift, and go to state 16
    DO            shift, and go to state 17
    LOOP          shift, and go to state 18
    BREAK         shift, and go to state 19
    CONTINUE      shift, and go to state 20
    RETURN        shift, and go to state 22
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    UNTIL         shift, and go to state 29
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    STATIC        shift, and go to state 40
    SPORK         shift, and go to state 41
    L_HACK        shift, and go to state 42

    type_decl_a                go to state 49
    type_decl_b                go to state 50
    type_decl                  go to state 51
    statement_list             go to state 90
    statement                  go to state 53
    jump_statement             go to state 54
    selection_statement        go to state 55
    loop_statement             go to state 56
    code_segment               go to state 57
    expression_statement       go to state 58
    expression                 go to state 59
    chuck_expression           go to state 60
    arrow_expression           go to state 61
    array_exp                  go to state 62
    decl_expression            go to state 63
    complex_exp                go to state 64
    polar_exp                  go to state 65
    vec_exp                    go to state 66
    conditional_expression     go to state 67
    logical_or_expression      go to state 68
    logical_and_expression     go to state 69
    inclusive_or_expression    go to state 70
    exclusive_or_expression    go to state 71
    and_expression             go to state 72
    equality_expression        go to state 73
    relational_expression      go to state 74
    shift_expression           go to state 75
    additive_expression        go to state 76
    multiplicative_expression  go to state 77
    tilda_expression           go to state 78
    cast_expression            go to state 79
    unary_expression           go to state 80
    unary_operator             go to state 81
    dur_expression             go to state 82
    postfix_expression         go to state 83
    primary_expression         go to state 84


state 10

  157 unary_operator: PLUS .

    $default  reduce using rule 157 (unary_operator)


state 11

  158 unary_operator: MINUS .

    $default  reduce using rule 158 (unary_operator)


state 12

  161 unary_operator: TIMES .

    $default  reduce using rule 161 (unary_operator)


state 13

   42 type_decl_b: LT . id_dot GT
   43            | LT . id_dot GT AT_SYM

    ID  shift, and go to state 91

    id_dot  go to state 92


state 14

   61 selection_statement: IF . LPAREN expression RPAREN statement
   62                    | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 93


state 15

   63 loop_statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 94


state 16

   65 loop_statement: FOR . LPAREN expression_statement expression_statement RPAREN statement
   66               | FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 95


state 17

   64 loop_statement: DO . statement WHILE LPAREN expression RPAREN SEMICOLON
   68               | DO . statement UNTIL LPAREN expression RPAREN SEMICOLON

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    NUM           shift, and go to state 4
    FLOAT         shift, and go to state 5
    SEMICOLON     shift, and go to state 6
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    LBRACE        shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    IF            shift, and go to state 14
    WHILE         shift, and go to state 15
    FOR           shift, and go to state 16
    DO            shift, and go to state 17
    LOOP          shift, and go to state 18
    BREAK         shift, and go to state 19
    CONTINUE      shift, and go to state 20
    RETURN        shift, and go to state 22
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    UNTIL         shift, and go to state 29
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    STATIC        shift, and go to state 40
    SPORK         shift, and go to state 41
    L_HACK        shift, and go to state 42

    type_decl_a                go to state 49
    type_decl_b                go to state 50
    type_decl                  go to state 51
    statement                  go to state 96
    jump_statement             go to state 54
    selection_statement        go to state 55
    loop_statement             go to state 56
    code_segment               go to state 57
    expression_statement       go to state 58
    expression                 go to state 59
    chuck_expression           go to state 60
    arrow_expression           go to state 61
    array_exp                  go to state 62
    decl_expression            go to state 63
    complex_exp                go to state 64
    polar_exp                  go to state 65
    vec_exp                    go to state 66
    conditional_expression     go to state 67
    logical_or_expression      go to state 68
    logical_and_expression     go to state 69
    inclusive_or_expression    go to state 70
    exclusive_or_expression    go to state 71
    and_expression             go to state 72
    equality_expression        go to state 73
    relational_expression      go to state 74
    shift_expression           go to state 75
    additive_expression        go to state 76
    multiplicative_expression  go to state 77
    tilda_expression           go to state 78
    cast_expression            go to state 79
    unary_expression           go to state 80
    unary_operator             go to state 81
    dur_expression             go to state 82
    postfix_expression         go to state 83
    primary_expression         go to state 84


state 18

   69 loop_statement: LOOP . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 97


state 19

   59 jump_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 98


state 20

   60 jump_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 99


state 21

   33 function_decl: FUNCTION .

    $default  reduce using rule 33 (function_decl)


state 22

   57 jump_statement: RETURN . SEMICOLON
   58               | RETURN . expression SEMICOLON

    ID            shift, and go to state 1
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    NUM           shift, and go to state 4
    FLOAT         shift, and go to state 5
    SEMICOLON     shift, and go to state 100
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    LT            shift, and go to state 13
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    EXTERNAL      shift, and go to state 30
    GLOBAL        shift, and go to state 31
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    SAME          shift, and go to state 35
    TILDA         shift, and go to state 36
    STATIC        shift, and go to state 40
    SPORK         shift, and go to state 41
    L_HACK        shift, and go to state 42

    type_decl_a                go to state 49
    type_decl_b                go to state 50
    type_decl                  go to state 51
    expression                 go to state 101
    chuck_expression           go to state 60
    arrow_expression           go to state 61
    array_exp                  go to state 62
    decl_expression            go to state 63
    complex_exp                go to state 64
    polar_exp                  go to state 65
    vec_exp                    go to state 66
    conditional_expression     go to state 67
    logical_or_expression      go to state 68
    logical_and_expression     go to state 69
    inclusive_or_expression    go to state 70
    exclusive_or_expression    go to state 71
    and_expression             go to state 72
    equality_expression        go to state 73
    relational_expression      go to state 74
    shift_expression           go to state 75
    additive_expression        go to state 76
    multiplicative_expression  go to state 77
    tilda_expression           go to state 78
    cast_expression            go to state 79
    unary_expression           go to state 80
    unary_operator             go to state 81
    dur_expression             go to state 82
    postfix_expression         go to state 83
    primary_expression         go to state 84


state 23

  160 unary_operator: EXCLAMATION .

    $default  reduce using rule 160 (unary_operator)


state 24

  150 unary_expression: PLUSPLUS . unary_expression

    ID            shift, and go to state 102
    STRING_LIT    shift, and go to state 2
    CHAR_LIT      shift, and go to state 3
    NUM           shift, and go to state 4
    FLOAT         shift, and go to state 5
    LPAREN        shift, and go to state 7
    LBRACK        shift, and go to state 8
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    TIMES         shift, and go to state 12
    EXCLAMATION   shift, and go to state 23
    PLUSPLUS      shift, and go to state 24
    MINUSMINUS    shift, and go to state 25
    POUNDPAREN    shift, and go to state 26
    PERCENTPAREN  shift, and go to state 27
    ATPAREN       shift, and go to state 28
    NEW           shift, and go to state 32
    SIZEOF        shift, and go to state 33
    TYPEOF        shift, and go to state 34
    TILDA         shift, and go to state 36
    SPORK         shift, and go to state 41
    L_HACK        shift, and go to state 42

    array_exp           go to state 62
    complex_exp         go to state 64
    polar_exp           go to state 65
    vec_exp             go to state 66
    unary_expression    go to state 103
    unary_operator      go to state 81
    dur_expression      go to state 82
    postfix_expression  go to state 83
    primary_expression  go to state 84


state 25

  151 unary_expression: MINUSMINUS . unary_expression
